# shape

./: .gitignore  AGENTS.md  Cargo.toml  README.md  operator.json  phase0_skill_inventory.json
.beads/: issues.jsonl
.github/workflows/: ci.yml  release.yml
agent_ergonomics_audit/: README.md
agent_ergonomics_audit/audit/: HANDOFF.md  agent_surfaces.jsonl  ambition_bar_check.md  applied_changes.jsonl  intent_inference_corpus.jsonl  manifest.json  phase0_cli.json  phase0_skill_inventory.json  playbook.md  recommendations.jsonl  scorecard_pass_1.md  surface_inventory.jsonl
docs/: ACCEPTANCE_CHECKLIST.md  CANONICAL_DOCS.md  PLAN.md  PLAN_SIGNOFF.md  README.md  UBS_POLICY.md  acceptance-checklist.md  final-signoff.md  plan-conformance-audit.md
rules/: witness-must-append.yml
scripts/: install.ps1  install.sh  ntm_proceed_ctl.sh  ubs_gate.sh
src/: doctor.rs  lib.rs  main.rs  orchestrator.rs  paths.rs  profile.rs  scan.rs
src/capsule/: min_repro.rs  (+1 more)
tests/: capsule_replay.rs  cli_display_flag_order.rs  cli_display_flags.rs  cli_display_precedence.rs  cli_display_value_validation_precedence.rs  describe_json_display.rs  display_flag_matrix.rs  display_mode_matrix.rs  doctor.rs  e2e_harness.rs  e2e_matrix.rs  e2e_smoke_harness.rs  golden_rules.rs  helpers.rs  human_golden.rs  human_snapshots.rs  json_golden.rs  json_invalid_delimiter.rs  long_display_with_positionals.rs  mod.rs  orchestrator_handoff.rs  orchestrator_pipeline.rs  profile_golden.rs  short_display_precedence.rs  short_display_with_positionals.rs  stream_routing.rs  witness_cli.rs  witness_schema.rs
(+67 files in other folders)
