[package]
name = "shape"
version = "0.1.0"
edition = "2024"
authors = ["CMD+RVL <engineering@cmdrvl.com>"]
description = "Structural comparability gate — can these two CSV datasets be compared at all?"
license = "MIT"
repository = "https://github.com/cmdrvl/shape"
readme = "README.md"
keywords = ["csv", "schema", "comparability", "cli", "reconciliation"]
categories = ["command-line-utilities"]

[[bin]]
name = "shape"
path = "src/main.rs"

[dependencies]
blake3 = "1"
clap = { version = "4", features = ["derive"] }
csv = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
